Add images directory and lasagna recipe content to lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,19 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="../images/lasagna_image.jpg" alt="Lasagna image" width="400" height="240">
+    <h2>Description</h2>
+    <p>Yummy lasagna</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Cheese</li>
+        <li>Spices</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Add cheese</li>
+        <li>Add spices</li>
+        <li>Heat in oven</li>
+    </ol>
 </body>
 </html>
