Add simple CSS style

--- a/recipes/pierogi.html
+++ b/recipes/pierogi.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Pierogi</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <h1>Pierogi</h1>
     <img src="../images/pierogi_image.jpg" alt="Pierogi image" width="400" height="240">
     <h2>Description</h2>
     <p>Yummy pierogi</p>
